Centered and aligned the Shows Section. Fixed the alignment on the Shows Hero container.

--- a/sprint-three/styles/main.css
+++ b/sprint-three/styles/main.css
@@ -290,11 +290,12 @@ body {
 }
 
 .shows-hero__title {
-  margin: 0 1rem 2rem 1rem;
+  margin: 0 1rem 4rem 1rem;
   font-family: "Avenir Next Bold";
   color: #fafafa;
   font-size: 2rem;
   line-height: 2.5rem;
+  width: 80%;
 }
 
 @media (min-width: 768px) {
@@ -322,14 +323,14 @@ body {
 @media (min-width: 768px) {
   .shows-hero__sc {
     padding: 0 1.5rem;
-    width: 63%;
+    max-width: 480px;
   }
 }
 
 @media (min-width: 1440px) {
   .shows-hero__sc {
-    margin-bottom: 1rem;
-    width: 27.25rem;
+    margin: 0 0 1rem 0;
+    width: 436px;
     padding: 0;
   }
 }
@@ -347,7 +348,7 @@ body {
 @media (min-width: 1440px) {
   .shows {
     width: 78.5rem;
-    padding: 3rem 11.5rem;
+    padding: 3rem 11.25rem;
     width: unset;
   }
 }
@@ -386,6 +387,8 @@ body {
 @media (min-width: 768px) {
   .shows__details {
     margin: 0;
+    width: 25%;
+    font-size: 0.75rem;
   }
 }
 
@@ -397,6 +400,8 @@ body {
 @media (min-width: 768px) {
   .shows__details--date {
     margin: 0;
+    width: 20%;
+    font-size: 0.75rem;
   }
 }
 
@@ -414,37 +419,23 @@ body {
     color: #afafaf;
     font-size: 1rem;
     margin: 2.5rem 0 0 0;
-    width: 68%;
+    width: 64%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 
 @media (min-width: 1440px) {
   .shows__details--tab {
     margin: 2.5rem 0 1.5rem 0;
+    width: 61.5%;
   }
 }
 
 @media (min-width: 768px) {
   .shows__details--mid {
-    margin-left: 9.4rem;
-  }
-}
-
-@media (min-width: 1440px) {
-  .shows__details--mid {
-    margin-left: 11.5rem;
-  }
-}
-
-@media (min-width: 768px) {
-  .shows__details--right {
-    margin-left: 6.5rem;
-  }
-}
-
-@media (min-width: 1440px) {
-  .shows__details--right {
-    margin-left: 8.3rem;
+    margin-left: -2rem;
   }
 }
 
@@ -501,6 +492,8 @@ body {
   border-radius: 4px;
   border: 1px solid #fafafa;
   width: 100%;
+  max-width: 18rem;
+  margin: 0 auto;
 }
 
 .shows__btn__btn:hover {
@@ -510,6 +503,9 @@ body {
 @media (min-width: 768px) {
   .shows__btn {
     padding: 1rem 2rem;
+    max-width: 10rem;
+    width: 100%;
+    font-size: 0.75rem;
   }
 }
 
@@ -920,6 +916,7 @@ body {
   font-size: 1rem;
   border-radius: 4px;
   border: 1px solid #fafafa;
+  max-width: 18rem;
 }
 
 .comment__btn__btn:hover {
