--- a/sprint-three/styles/partials/_comments.scss
+++ b/sprint-three/styles/partials/_comments.scss
@@ -128,6 +128,7 @@
     font-size: 1rem;
     border-radius: 4px;
     border: 1px solid $secondary-color;
+    max-width: 18rem;
 
     &__btn:hover {
       background-color: $btn-hover;
